<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->

        <item
            android:id="@+id/nav_weather"

            android:title="@string/menu_weather" />

        <item
            android:id="@+id/nav_place"

            android:title="@string/menu_place" />

        <item
            android:id="@+id/nav_food"

            android:title="@string/menu_food" />

        <item
            android:id="@+id/nav_bus"

            android:title="@string/menu_bus" />

        <item
            android:id="@+id/nav_flight"

            android:title="@string/menu_flight" />

        <item
            android:id="@+id/nav_road"

            android:title="@string/menu_road" />
        <item
            android:id="@+id/nav_budget"

            android:title="@string/menu_budget" />

    </group>
</menu>