<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tourism_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tourism_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tourism_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/nav_weather"
        android:name="com.example.tourism_app.weather"
        android:label="@string/menu_weather"
        tools:layout="@layout/activity_weather" />

    <activity
        android:id="@+id/nav_food"
        android:name="com.example.tourism_app.showfood"
        android:label="@string/menu_food"
        tools:layout="@layout/activity_showfood" />


    <activity
        android:id="@+id/nav_place"
        android:name="com.example.tourism_app.showlist"
        android:label="@string/menu_place"
        tools:layout="@layout/activity_showlist" />

    <activity
        android:id="@+id/nav_bus"
        android:name="com.example.tourism_app.displaybus"
        android:label="@string/menu_bus"
        tools:layout="@layout/activity_displaybus" />

    <activity
        android:id="@+id/nav_flight"
        android:name="com.example.tourism_app.disflight"
        android:label="@string/menu_flight"
        tools:layout="@layout/activity_disflight" />

    <activity
        android:id="@+id/nav_road"
        android:name="com.example.tourism_app.byroad"
        android:label="@string/menu_road"
        tools:layout="@layout/activity_byroad" />

    <activity
        android:id="@+id/nav_budget"
        android:name="com.example.tourism_app.budget"
        android:label="@string/menu_budget"
        tools:layout="@layout/activity_budget" />

</navigation>